# IDEA_project

doc/: high_level_design__2_.md  low_level_design__1_.md  presentation_slides  requirements_document__2_.md  signature.md  test_design_report.md
doc/user_manual/: user_manual.md
ideAInator/: pyproject.toml
ideAInator/_server/core/: models.py  urls.py  views.py
ideAInator/_server/core/migrations/: 0003_myuser_remove_customuser_auth_user.py  0005_chatlog_content_chatlog_timestamp.py  0006_extractedtext.py  0008_extractedtext_class_name.py  0011_remove_extractedtext_user.py
ideAInator/_server/core/templates/core/: index.html
ideAInator/_server/core/utils/: text_processor.py
ideAInator/_server/registration/: views.py
ideAInator/_server/registration/migrations/: 0001_initial.py  0002_alter_customuser_anumber.py
ideAInator/_server/registration/templates/registration/: sign_in.html
ideAInator/client/src/: App.jsx  index.css
ideAInator/client/src/pages/: _Chat.jsx  _Home.jsx  _Navbar.jsx  _PDFUpload.jsx  _Profile.jsx  home.css
src/_server/: db.sqlite3
src/_server/_server/: settings.py
src/_server/core/migrations/: 0001_initial.py  0002_customuser_classes_customuser_conversations.py  0004_myuser_auth_user_myuser_groups_and_more.py  0007_myuser_classes_myuser_conversations.py  0009_extractedtext_user.py  0010_alter_extractedtext_user.py
src/_server/core/utils/: chatgptSecurity.py  pdf_parser.py
src/_server/registration/: models.py  urls.py
src/client/: .gitignore  index.html  package-lock.json  package.json
src/client/src/: main.jsx
(+9 files in other folders)
