[tool.poetry]
name = "newideanator"
version = "0.1.0"
description = ""
authors = ["dylhill <166861401+dylhill@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
openai = "^1.54.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.6.0"
pdfplumber = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
